[gd_scene format=3 uid="uid://b68kwpurh6i5k"]

[ext_resource type="Script" uid="uid://mnxq8kgkny1v" path="res://scripts/GUI-Parts/Containers/money_panel_container.gd" id="1_ih8l4"]
[ext_resource type="Script" uid="uid://bk20uye83cb75" path="res://scripts/GUI-Parts/Labels/money_text.gd" id="2_6cg1q"]
[ext_resource type="Texture2D" uid="uid://cyu7vrvqxbs4k" path="res://assets/icons/ico-clear-map.svg" id="3_5kft6"]
[ext_resource type="Script" uid="uid://cnno3gxwkcq8p" path="res://scripts/GUI-Parts/Containers/energy_panel_container.gd" id="4_jle77"]
[ext_resource type="Texture2D" uid="uid://d2kyminpy1djd" path="res://assets/icons/ico-build-menu-popup.svg" id="4_k6k57"]
[ext_resource type="Script" uid="uid://r0rnaqlgpto8" path="res://scripts/GUI-Parts/Labels/energy_text.gd" id="4_knumo"]
[ext_resource type="Texture2D" uid="uid://dggq1kt6gg1di" path="res://assets/icons/ico-load-map.svg" id="4_mpvbp"]
[ext_resource type="Script" uid="uid://bkmyy8cvk5ymo" path="res://scripts/GUI-Parts/Buttons/clear_map_button.gd" id="5_7yowc"]
[ext_resource type="Texture2D" uid="uid://b866yuca2b0hh" path="res://assets/icons/ico-save-map.svg" id="5_k6k57"]
[ext_resource type="Texture2D" uid="uid://ehkyh4dgp02j" path="res://assets/icons/ico-energy.svg" id="5_mpvbp"]
[ext_resource type="Texture2D" uid="uid://drdpwqqyy2w8k" path="res://assets/icons/ico-open-building-menu.svg" id="6_08tdh"]
[ext_resource type="Script" uid="uid://5y4euw3xvs0o" path="res://scripts/GUI-Parts/Buttons/open_bm_button.gd" id="7_4xkgq"]
[ext_resource type="Script" uid="uid://c5bfl8p8pfe4o" path="res://scripts/GUI-Parts/Buttons/load_map_button.gd" id="7_6cg1q"]
[ext_resource type="Texture2D" uid="uid://kiy3m3dntdy4" path="res://assets/icons/ico-money.svg" id="7_k6k57"]
[ext_resource type="Script" uid="uid://c00dq202pcvhm" path="res://scripts/GUI-Parts/Buttons/clip_button.gd" id="7_mpvbp"]
[ext_resource type="Script" uid="uid://b8qn7olnpfcms" path="res://scripts/GUI-Parts/Buttons/save_map_button.gd" id="9_knumo"]
[ext_resource type="Script" uid="uid://c2wv5yl127f1m" path="res://scripts/GUI-Parts/Containers/bm_choose_container.gd" id="17_iwuq4"]
[ext_resource type="Texture2D" uid="uid://dkxbpmfp1vn1r" path="res://assets/sprites/Factory.svg" id="18_kmdpq"]
[ext_resource type="StyleBox" uid="uid://dvp3tifflye22" path="res://styles/boxes/choose_button_default.stylebox" id="18_lhh8c"]
[ext_resource type="Script" uid="uid://c5nsxrb42ysyv" path="res://scripts/GUI-Parts/ChooseScripts/factory_choose.gd" id="19_kmdpq"]
[ext_resource type="Script" uid="uid://dri8e2pm8myeh" path="res://scripts/GUI-Parts/ChooseScripts/energy_center.gd" id="20_b2bkl"]
[ext_resource type="Texture2D" uid="uid://csd4mehia3ywv" path="res://assets/sprites/EnergyCenter.svg" id="20_m4i20"]

[sub_resource type="SystemFont" id="SystemFont_cfb1g"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_327hm"]
font = SubResource("SystemFont_cfb1g")
font_size = 50
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.5019608)
shadow_offset = Vector2(3.815, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vq3cn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kft6"]
bg_color = Color(0.6, 1, 0.8862745, 0.69411767)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jle77"]
bg_color = Color(0.2, 0.2, 0.2, 0.59607846)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lhh8c"]
bg_color = Color(1, 0.3221139, 0.4172348, 0.28235295)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20

[sub_resource type="ButtonGroup" id="ButtonGroup_jle77"]
resource_name = "MenuButtons"
allow_unpress = true

[node name="CanvasLayer" type="CanvasLayer" unique_id=1982307454]

[node name="Root" type="Control" parent="." unique_id=237791725]
layout_direction = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MaterialContainer" type="VBoxContainer" parent="Root" unique_id=629323586]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -408.0
offset_bottom = 159.0
grow_horizontal = 0
alignment = 1

[node name="Money" type="PanelContainer" parent="Root/MaterialContainer" unique_id=948135453]
layout_mode = 2
script = ExtResource("1_ih8l4")

[node name="MoneyAligner" type="HBoxContainer" parent="Root/MaterialContainer/Money" unique_id=1000214062]
layout_mode = 2
alignment = 1

[node name="MoneyIcon" type="TextureRect" parent="Root/MaterialContainer/Money/MoneyAligner" unique_id=1350503367]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
texture = ExtResource("7_k6k57")
expand_mode = 1
stretch_mode = 5

[node name="MoneyText" type="Label" parent="Root/MaterialContainer/Money/MoneyAligner" unique_id=1653950941]
layout_mode = 2
text = "000000000"
label_settings = SubResource("LabelSettings_327hm")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_6cg1q")

[node name="Energy" type="PanelContainer" parent="Root/MaterialContainer" unique_id=148706291]
layout_mode = 2
script = ExtResource("4_jle77")

[node name="EnergyAlign" type="HBoxContainer" parent="Root/MaterialContainer/Energy" unique_id=2008203456]
layout_mode = 2
alignment = 1

[node name="EnergyIcon" type="TextureRect" parent="Root/MaterialContainer/Energy/EnergyAlign" unique_id=1946809086]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
texture = ExtResource("5_mpvbp")
expand_mode = 1
stretch_mode = 5

[node name="EnergyText" type="Label" parent="Root/MaterialContainer/Energy/EnergyAlign" unique_id=2138007787]
layout_mode = 2
text = "000000000"
label_settings = SubResource("LabelSettings_327hm")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_knumo")

[node name="BMContainer" type="PanelContainer" parent="Root" unique_id=642914096]
layout_direction = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -398.0
offset_right = 138.0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vq3cn")

[node name="BMAligner" type="VBoxContainer" parent="Root/BMContainer" unique_id=1641952708]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="ClippableButtonsContainer" type="VBoxContainer" parent="Root/BMContainer/BMAligner" unique_id=2007205240]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="OpenBMButton" type="Button" parent="Root/BMContainer/BMAligner/ClippableButtonsContainer" unique_id=854650846]
layout_mode = 2
theme_override_constants/icon_max_width = 130
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("3_5kft6")
theme_override_styles/normal = SubResource("StyleBoxFlat_5kft6")
toggle_mode = true
icon = ExtResource("6_08tdh")
script = ExtResource("7_4xkgq")

[node name="ClearMapButton" type="Button" parent="Root/BMContainer/BMAligner/ClippableButtonsContainer" unique_id=115204494]
layout_mode = 2
theme_override_constants/icon_max_width = 130
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("3_5kft6")
theme_override_styles/normal = SubResource("StyleBoxFlat_5kft6")
script = ExtResource("5_7yowc")

[node name="LoadMapButton" type="Button" parent="Root/BMContainer/BMAligner/ClippableButtonsContainer" unique_id=1457508612]
layout_mode = 2
theme_override_constants/icon_max_width = 130
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("4_mpvbp")
theme_override_styles/normal = SubResource("StyleBoxFlat_5kft6")
script = ExtResource("7_6cg1q")

[node name="SaveMapButton" type="Button" parent="Root/BMContainer/BMAligner/ClippableButtonsContainer" unique_id=1570243731]
layout_mode = 2
theme_override_constants/icon_max_width = 130
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("5_k6k57")
theme_override_styles/normal = SubResource("StyleBoxFlat_5kft6")
script = ExtResource("9_knumo")

[node name="ClipButton" type="Button" parent="Root/BMContainer/BMAligner" unique_id=1185070358]
layout_mode = 2
theme_override_constants/icon_max_width = 130
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("4_k6k57")
toggle_mode = true
script = ExtResource("7_mpvbp")

[node name="BMChooseContainer" type="PanelContainer" parent="Root" unique_id=1702247083]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -879.0
offset_top = -487.0
offset_right = 879.0
offset_bottom = 487.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jle77")
script = ExtResource("17_iwuq4")

[node name="ChooseScroller" type="ScrollContainer" parent="Root/BMChooseContainer" unique_id=531171728]
layout_mode = 2

[node name="ChooseGrid" type="GridContainer" parent="Root/BMChooseContainer/ChooseScroller" unique_id=1393219566]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 10

[node name="Factory" type="Button" parent="Root/BMChooseContainer/ChooseScroller/ChooseGrid" unique_id=1022632674]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("18_lhh8c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lhh8c")
theme_override_styles/hover = ExtResource("18_lhh8c")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_jle77")
icon = ExtResource("18_kmdpq")
script = ExtResource("19_kmdpq")

[node name="EnergyCenter" type="Button" parent="Root/BMChooseContainer/ChooseScroller/ChooseGrid" unique_id=842065404]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("18_lhh8c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lhh8c")
theme_override_styles/hover = ExtResource("18_lhh8c")
toggle_mode = true
button_group = SubResource("ButtonGroup_jle77")
icon = ExtResource("20_m4i20")
script = ExtResource("20_b2bkl")

[connection signal="mouse_entered" from="Root/MaterialContainer" to="Root/MaterialContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/MaterialContainer" to="Root/MaterialContainer" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Root/MaterialContainer/Money" to="Root/MaterialContainer/Money" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/MaterialContainer/Money" to="Root/MaterialContainer/Money" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Root/MaterialContainer/Energy" to="Root/MaterialContainer/Energy" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/MaterialContainer/Energy" to="Root/MaterialContainer/Energy" method="_on_mouse_exited"]
[connection signal="gui_input" from="Root/BMContainer" to="Root/BMContainer" method="_on_gui_input"]
[connection signal="mouse_entered" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/OpenBMButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/OpenBMButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/OpenBMButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/OpenBMButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/OpenBMButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/OpenBMButton" method="_on_pressed"]
[connection signal="toggled" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/OpenBMButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/OpenBMButton" method="_on_toggled"]
[connection signal="mouse_entered" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/ClearMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/ClearMapButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/ClearMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/ClearMapButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/ClearMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/ClearMapButton" method="_on_pressed"]
[connection signal="mouse_entered" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/LoadMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/LoadMapButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/LoadMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/LoadMapButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/LoadMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/LoadMapButton" method="_on_pressed"]
[connection signal="mouse_entered" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/SaveMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/SaveMapButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/SaveMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/SaveMapButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Root/BMContainer/BMAligner/ClippableButtonsContainer/SaveMapButton" to="Root/BMContainer/BMAligner/ClippableButtonsContainer/SaveMapButton" method="_on_pressed"]
[connection signal="mouse_entered" from="Root/BMContainer/BMAligner/ClipButton" to="Root/BMContainer/BMAligner/ClipButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/BMContainer/BMAligner/ClipButton" to="Root/BMContainer/BMAligner/ClipButton" method="_on_mouse_exited"]
[connection signal="toggled" from="Root/BMContainer/BMAligner/ClipButton" to="Root/BMContainer/BMAligner/ClipButton" method="_on_toggled"]
[connection signal="mouse_entered" from="Root/BMChooseContainer" to="Root/BMChooseContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/BMChooseContainer" to="Root/BMChooseContainer" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Root/BMChooseContainer/ChooseScroller/ChooseGrid/Factory" to="Root/BMChooseContainer/ChooseScroller/ChooseGrid/Factory" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/BMChooseContainer/ChooseScroller/ChooseGrid/Factory" to="Root/BMChooseContainer/ChooseScroller/ChooseGrid/Factory" method="_on_mouse_exited"]
[connection signal="pressed" from="Root/BMChooseContainer/ChooseScroller/ChooseGrid/Factory" to="Root/BMChooseContainer/ChooseScroller/ChooseGrid/Factory" method="_on_pressed"]
[connection signal="mouse_entered" from="Root/BMChooseContainer/ChooseScroller/ChooseGrid/EnergyCenter" to="Root/BMChooseContainer/ChooseScroller/ChooseGrid/EnergyCenter" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Root/BMChooseContainer/ChooseScroller/ChooseGrid/EnergyCenter" to="Root/BMChooseContainer/ChooseScroller/ChooseGrid/EnergyCenter" method="_on_mouse_exited"]
[connection signal="pressed" from="Root/BMChooseContainer/ChooseScroller/ChooseGrid/EnergyCenter" to="Root/BMChooseContainer/ChooseScroller/ChooseGrid/EnergyCenter" method="_on_pressed"]
